# velogarage

./: CLAUDE.md  LICENSE  README.md
.github/workflows/: codeql.yml  velogarage-api.yaml  web.yaml
api/: .env.example  Dockerfile  main.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  store.py  strava.py
api/tests/: conftest.py  test_athlete_id.py  test_auth.py  test_health.py  test_store.py
app/: .env.example  .gitignore  app.json  drizzle.config.ts  package-lock.json  package.json
app/app/: _layout.tsx  auth.tsx
app/app/(tabs)/: _layout.tsx
app/components/: ComponentHealthBar.tsx
app/db/: client.ts  schema.ts
app/lib/: auth.ts  intervals.ts  strava.ts
app/stores/: authStore.ts  syncStore.ts
docs/: index.html
docs/app/: index.html  manifest.json
docs/app/assets/: index-0sipyWzP.js  index-6aTMMEMo.css  index-7NLt3KAc.css  index-8Ib2mzYM.js  index-96B4JJWb.js  index-9QSf6dYk.js  index-B1f8yAPJ.js  index-B1fJRds6.css  index-BAvKovRO.css  index-BD6wArtJ.js  index-BEzIancE.css  index-BGktb5eG.css  index-BJcsRsNI.js  index-BOv5_gyk.css  index-BQDsQ3LM.css  index-BWvOcAMT.js  index-BcDlsOOc.js  index-BfHu-uyf.js  index-BmI-SrDP.js  index-BsQHLDMu.js  index-Bx8s-GX3.js  index-ByHW_UPJ.css  index-Bz1L1r0u.js  index-BznjiV0X.js  index-C640aDqY.css  index-C6q6Z8pX.css  (+67 more)
docs/prototype/: index.html  manifest.json
scripts/: make_icons.py
web/: .env.mock  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx  GarageContext.tsx  UnitsContext.tsx  main.tsx  styles.css  types.ts
(+32 files in other folders)
